# TikTokMonitor

./: .gitattributes  .gitignore  README.md  config.example.yaml  docker-compose.yml
.github/workflows/: desktop-build.yml  server-check.yml
analysis_artifacts/: REPLICA_PLAN.md
apps/desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
docs/: CLOUD_DEPLOYMENT.md  CROSS_PLATFORM_CLIENT_PLAN.md  IMPLEMENTATION_ROADMAP.md  MIGRATION_PROGRESS.md  NEXT_TASKS.md  OPTIMIZATION_PLAN.md  TEAM_DEPLOYMENT_RECOMMENDATION.md  USER_GUIDE.md
replica_src/: Mac使用说明.md  README.md  TikTokMonitorReplica.spec  TikTokMonitorReplicaMac.spec  build_mac_app.command  requirements-mac.txt  start_mac.command  start_mac_desktop.command  verify_desktop_deps.py  verify_packaged_exe.py  verify_runtime.py  verify_sync_once.py  verify_web_server.py  使用说明.md
replica_src/app/: analytics.py  auth.py  database.py  deps.py  desktop.py  migrate.py  models.py  notifications.py  routes.py  scheduler.py  sync_progress.py  system_status.py
replica_src/static/: style.css
replica_src/templates/: alerts_page.html  login.html  logs.html  settings.html  video.html
server/: Dockerfile  README.md  config.docker.yaml  main.py  requirements.txt  verify_providers.py  verify_runtime.py
server/app/: alerts.py  analytics.py  audit.py  auth.py  config.py  export.py  groups.py  intelligence.py  (+7 more)
(+15 files in other folders)
