[package]
name = "tiktokmonitor-desktop"
version = "0.1.2"
description = "Cross-platform desktop client for TikTokMonitor"
authors = ["TikTokMonitor Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
